# aikido-technique-recognition

./: .gitignore  AGENTS.md  README.md
builder/: environment.yml  pyproject.toml
builder/atr_motion/: __init__.py
builder/atr_motion/data/: __init__.py
builder/atr_motion/eval/: __init__.py
builder/atr_motion/ingest/: __init__.py
builder/atr_motion/models/: __init__.py
builder/atr_motion/primitives/: __init__.py
builder/atr_motion/represent/: __init__.py
builder/atr_motion/train/: __init__.py
builder/notebooks/: README.md
builder/tests/: __init__.py
contributor/: README.md  environment.yml  pyproject.toml  ratify.sh  review.sh
contributor/app/: __init__.py  main.py
contributor/app/records/: __init__.py
contributor/app/routes/: __init__.py
contributor/app/serving/: __init__.py
contributor/schema/: ratification.schema.json  review.schema.json
contributor/src/atr_contributor/: __init__.py  app.py  cli.py  merge.py  store.py
contributor/src/atr_contributor/web/: index.html
contributor/tests/: __init__.py  test_store.py  test_ui.py
data/: README.md  refinements.json
data/map/: README.md  coverage_report.md  dojos.json  edges.json  organizations.json  persons.json  rank_events.json  review.json  tenures.json
data/map/export/: atr_map.dump.sql  organizations.csv  persons.csv  v_dojo.csv  v_lineage.csv  v_promotions.csv  v_tenure.csv
data/models/: README.md
data/taxonomy/: README.md  glossary.json  keyframes.json  kinemes.json  sources.json  techniques.json  textblocks.json
deploy/: README.md  docker-compose.yml
docs/: atr_01_overview.docx  atr_01_overview.md  atr_02_roadmap.docx  atr_02_roadmap.md  atr_03_onboarding_teacher.docx  atr_03_onboarding_teacher.md  atr_04_governance_thread.docx  atr_04_governance_thread.md  atr_06_toolchain_stack.docx  atr_06_toolchain_stack.md  atr_09_book_ingestion.docx  atr_09_book_ingestion.md  atr_10_source_bibliography.docx  atr_10_source_bibliography.md  atr_11_lineage_tree.md  atr_12_federation_map.md  atr_13_datamap_crawl.md  atr_14_movement_language_text.md  atr_15_roadmap_build.py  atr_15_roadmap_graph.dot  atr_15_roadmap_graph.md  revisions.json
resources/: .gitignore  README.md
schema/: __init__.py  contribution.py  movement.py  movement.schema.json  parse.py  pyproject.toml  refinement.py  refinement.schema.json  skeleton.py
schema/tests/: test_refinement.py
tools/: README.md
tools/crawler/: .gitignore  PROMPT.md  README.md  environment.yml  lineage_seed_sources.md  organizations_seed.md  pyproject.toml
tools/crawler/schema/: entities.schema.json
tools/crawler/src/atr_crawler/: __init__.py  cli.py  copresence.py  db.py  dojo_sites.py  fetch.py  lineage.py  locators.py  phases.py  reconcile.py  report.py  slugs.py  store.py  usaf.py  validate.py  wikipedia.py
tools/crawler/src/atr_crawler/seeds/: dojos.json  organizations.json  persons.json  tenures.json
tools/crawler/tests/: conftest.py  test_crawler.py
tools/glossary/: README.md  build.py
tools/ingest/: README.md  environment.yml  pyproject.toml
tools/ingest/schema/: ingest.schema.json
tools/ingest/src/atr_ingest/: __init__.py  backfill.py  bookmeta.py  books.py  captions.py  cli.py  keyframes.py  link.py  ocr.py  photos.py  pipeline.py  render.py  store.py  structure.py  textblocks.py  textcli.py  translate.py  util.py
tools/ingest/tests/: test_ingest.py  test_refine_integration.py  test_structure.py
tools/publish/: README.md  pyproject.toml
tools/publish/src/atr_publish/: __init__.py  cli.py  convert.py  drive.py  revisions.py
web/: package.json
web/src/api/: index.ts
web/src/components/SkeletonPlayer/: index.tsx
web/src/demos/compare/: index.tsx
web/src/demos/contribute/: index.tsx
web/src/demos/lookup/: index.tsx
web/tests/: README.md
