[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-contributor"
version = "0.1.0"
description = "ATR contributor backend: the teacher ratification loop"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jsonschema",
]

[project.scripts]
atr-ratify = "atr_contributor.cli:main"
atr-ratify-merge = "atr_contributor.merge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atr_contributor = ["web/*.html"]
