[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-contributor"
version = "0.1.0"
description = "ATR contributor backend: the teacher review loop"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "jsonschema",
]

[project.scripts]
atr-review = "atr_contributor.cli:main"
atr-review-merge = "atr_contributor.merge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atr_contributor = ["web/*.html"]
