[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-schema"
version = "0.1.0"
description = "ATR shared contract: the Refinement primitive, contribution provenance, and movement (AML) schema"
requires-python = ">=3.10"
dependencies = []

# This directory is itself the importable `schema` package (flat layout):
# map the package name to the pyproject dir so `import schema.refinement` works.
[tool.setuptools]
packages = ["schema"]
package-dir = {"schema" = "."}

[tool.setuptools.package-data]
schema = ["*.schema.json"]
