[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-crawler"
version = "0.1.0"
description = "ATR lineage and federation data-map crawler"
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.18",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
atr-crawler = "atr_crawler.cli:main"
atr-crawler-db = "atr_crawler.db:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
atr_crawler = ["seeds/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
