[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "atr-ingest"
version = "0.1.0"
description = "ATR book-ingestion pipeline: scanned aikido PDFs -> taxonomy + keyframes"
requires-python = ">=3.10"
dependencies = [
    "pytesseract>=0.3.10",
    "opencv-python-headless>=4.8",
    "numpy",
    "pillow",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
atr-ingest = "atr_ingest.cli:main"
atr-ingest-backfill = "atr_ingest.backfill:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
